--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 <body>
     <p>Lucas Peterseim</p>
     <p>Matias Hildebrandt :D</p>
-    <p>Maximo Lopez :)</p>
+    <p>Maximo Lopez</p>
     <p>Castaño Valentino</p>
 
     <p>Pablo Buenaventura</p>
     <p>Antoonella Ojeda</p>
     <p>Tobares Nahuel</p>
-
+    <p>felipe contartese</p>
 </body>
 </html>
